added files to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,4 +16,9 @@
 # .nfs files are created when an open file is removed but is still being accessed
 .nfs*
 
+# Additional exclusions
+zinc_output
+zinc_to.cpp
+zinc_to.asm
+
 # End of https://www.toptal.com/developers/gitignore/api/linux
